--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<div>Hello</div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=\, initial-scale=1.0">
+  <title>Welcome</title>
+</head>
+<body>
+  <div>Start</div>
+</body>
+</html>
